--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <!-- تعديل الرابط ليستخدم base -->
+    <script type="module" src="/sb1-tpr97f/src/main.tsx"></script>
   </body>
 </html>
