--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- تعديل الرابط ليستخدم base -->
+    <!-- تعديل الرابط ليستخدم المسار الأساسي المحدد في base -->
     <script type="module" src="/sb1-tpr97f/src/main.tsx"></script>
   </body>
 </html>
